<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/otp_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:layoutDirection="ltr"
    app:cardBackgroundColor="@color/otpCardBackground"
    app:cardCornerRadius="15dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/otp_actions"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/delete_otp_code"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:contentDescription="@string/delete_otp_code_cd"
                    android:padding="4dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/otp_action_delete"
                    android:tint="#f8f8f8"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/share_otp_code"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:contentDescription="@string/share_otp_code_cd"
                    android:padding="4dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/otp_action_share"
                    android:tint="#f8f8f8" />

                <ImageButton
                    android:id="@+id/copy_otp_code"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:contentDescription="@string/copy_otp_code_cd"
                    android:padding="4dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/otp_action_copy"
                    android:tint="#f8f8f8" />

            </LinearLayout>

            <TextView
                android:id="@+id/otp_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginStart="13dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/vazir_bold"
                android:gravity="center_vertical|end"
                android:includeFontPadding="false"
                android:text="@string/otp_code"
                android:textColor="#f8f8f8"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/otp_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="3dp"
                android:contentDescription="@string/otp_code_icon_cd"
                android:src="@drawable/one_time_password_icon"
                android:tint="#f8f8f8" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/otp_expire_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:max="100"
            android:mirrorForRtl="false"
            android:progress="100"
            android:progressTint="@color/otpTimeExpireText"
            android:rotation="180"
            android:scaleY="1.1" />

    </LinearLayout>

</androidx.cardview.widget.CardView>