<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/select_otp_window_card"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/select_otp_window_height"
    android:clickable="true"
    android:focusable="true"
    android:layoutDirection="ltr"
    android:padding="4dp"
    app:cardBackgroundColor="@color/colorBackground"
    app:cardCornerRadius="25dp"
    app:cardElevation="8dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/window_drag_handle"
                android:layout_width="40dp"
                android:layout_height="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="1dp"
                app:cardBackgroundColor="@color/otpExpiredCardBackground"
                app:cardCornerRadius="50dp"
                app:cardElevation="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/close_otp_window"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="3dp"
                android:background="@null"
                android:contentDescription="@string/close_select_otp_code_cd"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:src="@drawable/otp_window_close"
                android:tint="@color/colorError"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/select_otp_window_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:fontFamily="@font/vazir_bold"
                android:gravity="center_vertical|end"
                android:layoutDirection="ltr"
                android:text="@string/select_otp_code_title"
                android:textColor="@color/colorAccent"
                android:textDirection="ltr"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/select_otp_window_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/select_otp_code_icon_cd"
                android:src="@drawable/select_otp_window_icon"
                android:tint="@color/colorAccent" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/otp_codes_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp" />

            <TextView
                android:id="@+id/otp_codes_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="24dp"
                android:fontFamily="@font/vazir_bold"
                android:gravity="center"
                android:text="@string/otp_codes_empty_view"
                android:textSize="14sp"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
